# mcircuit

./: .gitignore  CMakeLists.txt  README.md
include/: context.h  main_window.h  renderer.h  schematic.h  schematic_view.h  ui_component.h  ui_component_registry.h
include/controllers/: wire_drawing_controller.h
include/ui_components/: basic_gate.h  custom_component.h  led.h  led_matrix.h  not_gate.h  pin.h  switch.h
include/widgets/: property_editor.h
mcircuit/: CMakeLists.txt
mcircuit/include/mcircuit/: algorithm.h  component.h  pin.h  wire_manager.h
mcircuit/include/mcircuit/components/: basic_gate.h  custom_component.h  led.h  led_matrix.h  not_gate.h  switch.h  variable_input_gate.h
mcircuit/src/: algorithm.cpp  component.cpp  pin.cpp  wire_manager.cpp
mcircuit/src/components/: basic_gate.cpp  custom_component.cpp  led.cpp  led_matrix.cpp  not_gate.cpp  switch.cpp  variable_input_gate.cpp
src/: main.cpp  main_window.cpp  renderer.cpp  schematic.cpp  schematic_view.cpp  ui_component.cpp  ui_component_registry.cpp
src/controllers/: wire_drawing_controller.cpp
src/ui_components/: basic_gate.cpp  custom_component.cpp  led.cpp  led_matrix.cpp  not_gate.cpp  pin.cpp  switch.cpp
src/widgets/: property_editor.cpp
